#24 auto distribution generation scripts